# jk2mp

./: .gitignore  README.md
CODE-mp/: CMakeLists.txt  WinDed.vcxproj  WinDed.vcxproj.filters  jk2mp.sln  jk2mp.vcxproj  jk2mp.vcxproj.filters  joMME.sln
CODE-mp/CMakeModules/: FindLibMad.cmake
CODE-mp/botlib/: be_aas_entity.cpp  be_aas_move.cpp  be_aas_reach.cpp  be_ai_move.cpp  botlib.vcxproj  botlib.vcxproj.filters
CODE-mp/cgame/: animtable.h  bg_demos.h  cg_demos.c  cg_demos.h  cg_demos_camera.c  cg_demos_capture.c  cg_demos_dism.c  cg_demos_dof.c  cg_demos_hud.c  cg_demos_line.c  cg_demos_math.c  cg_demos_math.h  cg_demos_move.c  cg_demos_weather.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newDraw.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.c  cg_turret.c  cg_view.c  cg_weaponinit.c  cg_weapons.c  cgame.vcxproj  cgame.vcxproj.filters  fx_disruptor.c  (+2 more)
CODE-mp/client/: 0_SH_Leak.cpp  FXExport.cpp  FXExport.h  FxPrimitives.cpp  FxPrimitives.h  FxScheduler.cpp  FxScheduler.h  FxSystem.cpp  FxSystem.h  FxUtil.cpp  FxUtil.h  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_demos.cpp  cl_demos.h  cl_keys.cpp  cl_main.cpp  cl_mme.cpp  cl_scrn.cpp  cl_ui.cpp  client.h  snd_demos.cpp  snd_dma.cpp  snd_effects.cpp  snd_local.h  snd_main.cpp  snd_mem.cpp  snd_mix.cpp  snd_mix.h  snd_mme.cpp  snd_mp3.cpp  snd_public.h
CODE-mp/game/: anims.h  bg_local.h  bg_misc.c  bg_panimate.c  bg_pmove.c  bg_public.h  bg_saber.c  g_main.c  game.vcxproj  game.vcxproj.filters  q_math.c  q_shared.c  q_shared.h  surfaceflags.h
CODE-mp/ghoul2/: G2_API.cpp  G2_local.h  G2_misc.cpp
CODE-mp/jpeg-6/: jccolor.cpp  jcdctmgr.cpp  jchuff.cpp  jconfig.h  jcphuff.cpp  jcsample.cpp  jdcoefct.cpp  jdcolor.cpp  jdct.h  jddctmgr.cpp  jdhuff.cpp  jdhuff.h  jdmarker.cpp  jdsample.cpp  jidctflt.cpp  jinclude.h  jmorecfg.h  jpegint.h
CODE-mp/libs/win32/lib/: freetype.lib  libogg_static.lib  libvorbis_static.lib
CODE-mp/null/: null_snddma.cpp  win_main.cpp
CODE-mp/png/: rpng.cpp
CODE-mp/qcommon/: GenericParser2.cpp  cm_patch.cpp  common.cpp  cvar.cpp  files.cpp  game_version.h  msg.cpp  qcommon.h  tags.h  vm.cpp
CODE-mp/renderer/: glext.h  qgl.h  qgl_linked.h  tr_backend.cpp  tr_cmds.cpp  tr_flares.cpp  tr_font.cpp  tr_font.h  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_mme.cpp  tr_mme.h  tr_mme_avi.cpp  tr_mme_common.cpp  tr_mme_font.cpp  tr_mme_sse2.cpp  tr_mme_stereo.cpp  tr_model.cpp  tr_noise.cpp  tr_public.h  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_sky.cpp  tr_surface.cpp  tr_surfacesprites.cpp  tr_world.cpp
CODE-mp/sdl/: sdl_gamma.cpp  sdl_glimp.cpp  sdl_icon.h  sdl_input.cpp  sdl_local.h  sdl_snd.cpp
CODE-mp/server/: sv_client.cpp  sv_game.cpp  sv_init.cpp
CODE-mp/ui/: ui.vcxproj  ui.vcxproj.filters  ui_local.h  ui_main.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c
CODE-mp/unix/: linux_local.h  unix_main.cpp
CODE-mp/win32/: glw_win.h  win_glimp.cpp  win_local.h  win_main.cpp  win_qgl.cpp  win_shared.cpp  win_snd.cpp  win_syscon.cpp  win_wndproc.cpp
